Resolve header logo for both light and dark mode (#60)

--- a/src/components/Header/navbar.css
+++ b/src/components/Header/navbar.css
@@ -1,9 +1,12 @@
+
+
 .logo{
-  margin: 10px 10px 10px 0;
+  margin: 5px 5px 5px 0;
 }
 @media (max-width:960px){
   .logo{
     width: 170px;
+    height: fit-content;
   }
 }
   @media (max-width:400px){
